# gamejam64

./: Cargo.toml
assets/: test_level.ldtk
src/: bullets.rs  components.rs  game.rs  main.rs  mouse.rs  physics.rs  player.rs  setups.rs  systems.rs  utils.rs
src/enemies/: data.rs  logic.rs  mod.rs
src/game/: collision.rs  enemy.rs  exit.rs
src/player/: components.rs  mod.rs  systems.rs
src/ui/: menu.rs  splash.rs
