[package]
name = "gamejam64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = "symbols"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
# bevy-inspector-egui: Disable default features to avoid including bevy_pbr
bevy-inspector-egui = { version = "0.22.1", features = [] }
bevy_ecs_ldtk = "0.8.0"
bevy_rapier2d = "0.23.0"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/trouv/bevy_ecs_ldtk", branch = "feat/bevy-0.12" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
